<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E8EAF6"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txtTitulo"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="#000000"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNuevoEncuestado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:onClick="nuevoEncuestado_onClick"
        android:text="@string/btnNuevoEncuestado"
        android:background="#9FA8DA"
        android:textColor="#000000"
        />

    <Button
        android:id="@+id/btnListaEncuestado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:onClick="btnListaEncuestado_onClick"
        android:text="@string/btnListaEncuestado"
        android:background="#9FA8DA"
        android:textColor="#000000"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="8dp"
        android:text="@string/txtNombre1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/txtNombre2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="bold" />

</LinearLayout>